# Kos-Engine-2.0

./: .gitattributes  .gitignore  Build&Run-Debug.bat  Build&Run-Release.bat  README.md  bitbucket-pipelines.yml
kOS/Kos Editor/: CMakeLists.txt  PeformHotReload-Debug.bat  PeformHotReload-Release.bat
kOS/Kos Editor/Application/: Application.cpp  Application.h  Window.cpp
kOS/Kos Editor/AssetManager/: AssetDatabase.cpp  AssetDatabase.h  AssetManager.cpp  AssetManager.h  Prefab.cpp  Prefab.h  ScriptHotReload.h  Watcher.h
kOS/Kos Editor/Assets/Material/: testmat.mat
kOS/Kos Editor/Assets/Models/AnimationTest/: Anim_Gun_Fire.fbx
kOS/Kos Editor/Assets/Scene/: Audio Test Scene.json  New1 Scene.json  Octree.json  Particle.json  Physics Test Scene.json
kOS/Kos Editor/Compilers/: Compiler.h  CompilerDataHeader.h  TextureCompilerData.h
kOS/Kos Editor/Configs/: Config.json  ConfigPath.h  imgui.ini
kOS/Kos Editor/Dependencies/imgui/: imgui.cpp
kOS/Kos Editor/Editor/: EditorCamera.cpp  EditorCamera.h  EditorReflection.h  WindowFile.cpp  WindowFile.h
kOS/Kos Editor/Editor/ImGui Panels/: Editor.cpp  Editor.h  ImGuiStyle.h  imgui.ini  imgui_Gizmo.cpp  imgui_Material_window.cpp  imgui_animation_window.cpp  imgui_audioMixerWindow.cpp  imgui_baked_window.cpp  imgui_component_window.cpp  imgui_contentBrowser.cpp  imgui_editor_window.cpp  imgui_game_scene_window.cpp  imgui_hierarchy_window.cpp  imgui_input_window.cpp  imgui_layer_panel.cpp  imgui_logs_window.cpp  imgui_menubar.cpp  imgui_meta_winow.cpp  imgui_performance_window.cpp  imgui_play_pause.cpp  imgui_preferences_window.cpp  imgui_scene_settings_panel.cpp
kOS/Test/: CMakeLists.txt  common.h  main.cpp  test.cpp
(+1208 files in other folders)
